--- a/폴짝쓰/week1/index.html
+++ b/폴짝쓰/week1/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="./style.css" rel="stylesheet" />
-    <title>Document</title>
-  </head>
-  <body>
-    <script src="js/main.js"></script>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Drawing character</title>
+</head>
+<body>
+  <canvas></canvas>
+  <!-- <script src="app.js"></script>
+  <script src="background.js"></script> -->
+  <script src="app2.js"></script>
+  <!-- <script src="background.js"></script> -->
+</body>
 </html>
