--- a/죠이/week1/index.html
+++ b/죠이/week1/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./style.css" rel="stylesheet" />
-    <title>Document</title>
+    <title>Meme Maker</title>
   </head>
   <body>
+    <canvas></canvas>
     <script src="js/main.js"></script>
   </body>
 </html>
