--- a/주선/week1/index.html
+++ b/주선/week1/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
   </head>
   <body>
+    <canvas id="mycanvas" width="800" height="800"></canvas>
     <script src="js/main.js"></script>
   </body>
 </html>
