--- a/기무/week1/index.html
+++ b/기무/week1/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="./style.css" rel="stylesheet" />
-    <title>Document</title>
+    <title>Meme Maker</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <script src="js/main.js"></script>
+    <canvas></canvas>
+    <script src="./app.js"></script>
   </body>
 </html>
