--- a/민트향기/week1/index.html
+++ b/민트향기/week1/index.html
@@ -8,6 +8,8 @@
     <title>Document</title>
   </head>
   <body>
+    <canvas></canvas>
+    <div id="canvasXY"></div>
     <script src="js/main.js"></script>
   </body>
 </html>
