--- a/민트향기/week2/index.html
+++ b/민트향기/week2/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./style.css" rel="stylesheet" />
     <title>Document</title>
   </head>
   <body>
+    <canvas id="canvas"></canvas>
+    <div id="canvasXY"></div>
     <script src="js/main.js"></script>
   </body>
 </html>
