--- a/민트향기/week2/index.html
+++ b/민트향기/week2/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <canvas id="canvas"></canvas>
+    <input type="range" id="line-width" max="10" min="1" value="5" step="0.5">
     <div id="canvasXY"></div>
     <script src="js/main.js"></script>
   </body>
