--- a/주선/week2/index.html
+++ b/주선/week2/index.html
@@ -5,9 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./style.css" rel="stylesheet" />
-    <title>Document</title>
+    <title>Change Background</title>
   </head>
   <body>
+    <h1>Click the box to change your background</h1>
+    <div class="color-container">
+      <div class="color-box WarmFlame" data-color="WarmFlame">0</div>
+      <div class="color-box NightFade" data-color="NightFade">0</div>
+      <div class="color-box SpringWarmth" data-color="SpringWarmth">0</div>
+      <div class="color-box JuicyPeach" data-color="JuicyPeach">0</div>
+      <div class="color-box YoungPassion" data-color="YoungPassion">0</div>
+      <div class="color-box LadyLips" data-color="LadyLips">0</div>
+      <div class="color-box SunnyMorning" data-color="SunnyMorning">0</div>
+    </div>
     <script src="js/main.js"></script>
   </body>
 </html>
