--- a/두두두두두두둥/week2/index.html
+++ b/두두두두두두둥/week2/index.html
@@ -10,6 +10,7 @@
   <body>
     <canvas></canvas>
     <div class="optionContainer">
+      <h1 style="color: white">Line Width</h1>
       <input type="range" step="0.1" id="lineWidth" min="0" max="10" />
       <input type="color" id="color" />
       <div
