--- a/민트향기/week2/index.html
+++ b/민트향기/week2/index.html
@@ -1,57 +1,70 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
-    <link href="./style.css" rel="stylesheet" />
-    <title>Document</title>
-  </head>
-  <body>
-    <canvas id="canvas"></canvas>
-    <input type="range" id="line-width" max="10" min="1" value="5" step="0.5">
-    <input type="color" id="color">
-    <div class="c
-      olor-option" style="background:#c0392b" data-color="#c0392b">
-      </div>
-    <div 
-      class="color-option" 
-      style="background:#e67e22"
-      data-color="#e67e22">
-    </div>
-    <div 
-      class="color-option" 
-      style="background:#f1c40f"
-      data-color="#f1c40f">
-    </div>
-    <div 
-      class="color-option" 
-      style="background:#16a085"
-      data-color="#16a085">
-    </div>
-    <div 
-      class="color-option" 
-      style="background:#2980b9"
-      data-color="#2980b9">
-    </div>
-    <div 
-      class="color-option" 
-      style="background:#34495e"
-      data-color="#34495e">
-    </div>
-    <div 
-      class="color-option" 
-      style="background:#8e44ad"
-      data-color="#8e44ad">
-    </div>
-    <div 
-      class="color-option" 
-      style="background:#95a5a6"
-      data-color="#95a5a6">
-    </div>
-    <div 
-      class="color-option" 
-      style="background:#2c3e50"
-      data-color="#2c3e50">
-    </div>
-    <div id="canvasXY"></div>
-  </body>
-    <script src="js/main.js"></script>
+	<head>
+		<link href="./style.css" rel="stylesheet" />
+		<title>Document</title>
+	</head>
+	<body>
+		<canvas id="canvas"></canvas>
+		<input
+			type="range"
+			id="line-width"
+			max="10"
+			min="1"
+			value="5"
+			step="0.5"
+		/>
+		<div>
+			<input type="color" id="color" />
+			<div
+				class="c olor-option"
+				style="background: #c0392b"
+				data-color="#c0392b"
+			></div>
+			<div
+				class="color-option"
+				style="background: #e67e22"
+				data-color="#e67e22"
+			></div>
+			<div
+				class="color-option"
+				style="background: #f1c40f"
+				data-color="#f1c40f"
+			></div>
+			<div
+				class="color-option"
+				style="background: #16a085"
+				data-color="#16a085"
+			></div>
+			<div
+				class="color-option"
+				style="background: #2980b9"
+				data-color="#2980b9"
+			></div>
+			<div
+				class="color-option"
+				style="background: #34495e"
+				data-color="#34495e"
+			></div>
+			<div
+				class="color-option"
+				style="background: #8e44ad"
+				data-color="#8e44ad"
+			></div>
+			<div
+				class="color-option"
+				style="background: #95a5a6"
+				data-color="#95a5a6"
+			></div>
+			<div
+				class="color-option"
+				style="background: #2c3e50"
+				data-color="#2c3e50"
+			></div>
+		</div>
+		<button id="mode-btn">Fill</button>
+    <button id="destroy-btn">Destroy</button>
+    <button id="eraser-btn">Erase</button>
+	</body>
+	<script src="js/main.js"></script>
 </html>
