스탬프추가

--- a/개발자멍멍쌤/week2/index.html
+++ b/개발자멍멍쌤/week2/index.html
@@ -22,7 +22,11 @@
       <div class="color-option" style="background-color: #2ecc71" data-color="#2ecc71"></div>
       <div class="color-option" style="background-color: #e67e22" data-color="#e67e22"></div>
       <div class="color-option" style="background-color: #e67e22" data-color="#e67e22"></div>
-      
+      <button id="img-button" class="img-button"></button>
+      <label for="file2">
+        img
+        <input type="file" accept="image/*" id="file2" />
+      </label>
     </div>
     <canvas></canvas>
     <div class="btns">
