--- a/죠이/week2/index.html
+++ b/죠이/week2/index.html
@@ -8,7 +8,7 @@
     <title>Meme Maker</title>
   </head>
   <body>
-    <canvas></canvas>
+    <!-- <canvas></canvas>
     <input id="line-width" type="range" min="1" max="10" value="5" step="0.5" />
     <input id="color-pick" type="color" />
     <div>
@@ -75,7 +75,16 @@
     </div>
     <button id="mode-btn">Fill</button>
     <button id="destroy-btn">Destroy</button>
-    <button id="eraser-btn">Erase</button>
-    <script src="js/main.js"></script>
+    <button id="eraser-btn">Erase</button> -->
+    <!-- <script src="js/main.js"></script> -->
+
+    <div class="wrapper">
+      <h1>Hangman</h1>    
+      <button id="reset">Play again</button>
+      <canvas></canvas>
+      </div>
+    </div>
+
+    <script src="js/hangman.js"></script>
   </body>
 </html>
