--- a/민트향기/week2/index.html
+++ b/민트향기/week2/index.html
@@ -65,6 +65,9 @@
 		<button id="mode-btn">Fill</button>
     <button id="destroy-btn">Destroy</button>
     <button id="eraser-btn">Erase</button>
+	<input type="file" accept="image/*" id="file">
+	<input type="text" placeholder="Write and then double click" id="text">
+	<button id="save">Save Image</button>
 	</body>
 	<script src="js/main.js"></script>
 </html>
