--- a/두두두두두두둥/week3/index.html
+++ b/두두두두두두둥/week3/index.html
@@ -59,8 +59,13 @@
       ></div>
       <button id="eraser">Eraser</button>
       <button id="clear">Clear</button>
-      <input type="file" id="file" />
-      <input type="text" id="text" placeholder="Write your text" />
+      <label for="file">
+        <input type="file" id="file" />
+      </label>
+      <label for="text">
+        <input type="text" id="text" placeholder="Write your text" />
+      </label>
+
       <button id="save">Save</button>
     </div>
 
