강의 끝, 폰트 변경 및 브러쉬 커서 추가

--- a/주선/week2/index.html
+++ b/주선/week2/index.html
@@ -18,6 +18,10 @@
       <div class="color-box LadyLips" data-color="LadyLips">0</div>
       <div class="color-box SunnyMorning" data-color="SunnyMorning">0</div>
     </div>
+    <div class="notice">
+      <h2></h2>
+      <a class="hidden" href="./makebg.html">make your own</a>
+    </div>
     <script src="js/main.js"></script>
   </body>
 </html>
