--- a/주선/week3/index.html
+++ b/주선/week3/index.html
@@ -1,13 +1,112 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="./style.css" rel="stylesheet" />
-    <title>Document</title>
+    <link rel="stylesheet" href="./style.css" />
+    <title>Meme Maker</title>
   </head>
   <body>
-    <script src="js/main.js"></script>
+    <div class="color-options">
+      <input type="color" id="color" />
+      <div
+        class="color-option"
+        style="background-color: #3498db"
+        data-color="#3498db"
+      ></div>
+      <div
+        class="color-option"
+        style="background-color: #1abc9c"
+        data-color="#1abc9c"
+      ></div>
+      <div
+        class="color-option"
+        style="background-color: #34495e"
+        data-color="#34495e"
+      ></div>
+      <div
+        class="color-option"
+        style="background-color: #27ae60"
+        data-color="#27ae60"
+      ></div>
+      <div
+        class="color-option"
+        style="background-color: #8e44ad"
+        data-color="#8e44ad"
+      ></div>
+      <div
+        class="color-option"
+        style="background-color: #f1c40f"
+        data-color="#f1c40f"
+      ></div>
+      <div
+        class="color-option"
+        style="background-color: #e74c3c"
+        data-color="#e74c3c"
+      ></div>
+      <div
+        class="color-option"
+        style="background-color: #95a5a6"
+        data-color="#95a5a6"
+      ></div>
+      <div
+        class="color-option"
+        style="background-color: #d35400"
+        data-color="#d35400"
+      ></div>
+      <div
+        class="color-option"
+        style="background-color: #bdc3c7"
+        data-color="#bdc3c7"
+      ></div>
+      <div
+        class="color-option"
+        style="background-color: #2ecc71"
+        data-color="#2ecc71"
+      ></div>
+      <div
+        class="color-option"
+        style="background-color: #e67e22"
+        data-color="#e67e22"
+      ></div>
+    </div>
+    <canvas class="brush"></canvas>
+    <div class="btns">
+      <div class="line-width">
+        <input
+          id="line-width"
+          type="range"
+          min="1"
+          max="10"
+          value="5"
+          step="0.5"
+        />
+        <div id="line-width-num">5</div>
+      </div>
+      <button id="mode-btn">🩸 Fill</button>
+      <button id="destory-btn">💣 destory</button>
+      <button id="eraser-btn">❌ erase</button>
+      <label for="file">
+        📷 Add Photo
+        <input type="file" accept="image/*" id="file" />
+      </label>
+      <div class="font">
+        <input type="number" min="15" value="15" />
+        <select name="font">
+          <option value="serif" selected>serif</option>
+          <option value="Segoe UI">Segoe UI</option>
+          <option value="Helvetica Neue">Helvetica Neue</option>
+          <option value="Roboto">Roboto</option>
+        </select>
+        <select name="type">
+          <option value="stroke" selected>stroke</option>
+          <option value="fill">fill</option>
+        </select>
+      </div>
+      <input type="text" placeholder="Add text here... :)" id="text" />
+      <button id="save">💾 Save Image</button>
+    </div>
+    <script src="./main.js"></script>
   </body>
 </html>
