--- a/주선/week3/index.html
+++ b/주선/week3/index.html
@@ -107,6 +107,6 @@
       <input type="text" placeholder="Add text here... :)" id="text" />
       <button id="save">💾 Save Image</button>
     </div>
-    <script src="./main.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
