--- a/개발자멍멍쌤/week2/index.html
+++ b/개발자멍멍쌤/week2/index.html
@@ -34,7 +34,7 @@
         <input id="line-width" type="range" min="1" max="10" value="5" step="0.1" style="width: 85%;" />
         <input class="valuetext" id="line-width-text" type="text" value="5" style="width: 40px;" />
       </div>
-      <button id="mode-btn">🎨채우기</button>
+      <button id="mode-btn">🎨채우기1</button>
       <button id="destroy-btn">💣전체초기화</button>
       <button id="eraser-btn">🧱지우기</button>
       <label for="file">
