--- a/개발자멍멍쌤/week3/index.html
+++ b/개발자멍멍쌤/week3/index.html
@@ -1,13 +1,52 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="./style.css" rel="stylesheet" />
-    <title>Document</title>
+    <title>시계 공부</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <script src="js/main.js"></script>
+    <div>
+      <canvas id="clock"></canvas>
+      <canvas id="clock2"></canvas>
+      <div style="flex-direction: column;">
+        <label for="realtime">
+          <input type="checkbox" id="realtime" checked/>실시간
+        </label>
+        <br>
+        <label for="hourvalueview">
+          <input type="checkbox" id="hourvalueview" checked/>시숫자
+        </label>        
+        <label for="minvalueview">
+          <input type="checkbox" id="minvalueview" checked/>분숫자
+        </label>
+        <label for="secvalueview">
+          <input type="checkbox" id="secvalueview" checked/>초숫자
+        </label>
+        <br>
+        <label for="hourhandview">
+          <input type="checkbox" id="hourhandview" checked/>시침
+        </label>        
+        <label for="minhandview">
+          <input type="checkbox" id="minhandview" checked/>분침
+        </label>
+        <label for="sechandview">
+          <input type="checkbox" id="sechandview" checked/>초침
+        </label>                
+    </div>
+    </div>
+    <br>
+    <div>
+      <div class="digitalclock">
+        <span class="ampm"></span>
+        <span class="hms"></span>
+      </div>
+      <canvas id="digitalclock2"></canvas>  
+    </div>
+    <script src="./Vector.js"></script>
+    <script src="./clock.js"></script>    
+    <script src="./clock2.js"></script>
   </body>
 </html>
