--- a/주선/week3/index.html
+++ b/주선/week3/index.html
@@ -73,6 +73,13 @@
     </div>
     <canvas class="brush"></canvas>
     <div class="btns">
+      <div class="stamp">
+        <span id="stamp">Stamp</span>
+        <div class="rect"></div>
+        <div class="circle"></div>
+        <div class="heart">♥️</div>
+        <div class="star">★</div>
+      </div>
       <div class="line-width">
         <input
           id="line-width"
