마지막주차

--- a/민트향기/week2/index.html
+++ b/민트향기/week2/index.html
@@ -2,13 +2,24 @@
 <html lang="ko">
 	<head>
 		<link href="./style.css" rel="stylesheet" />
-		<title>Document</title>
+		<title>노마드코더 canvas 결과물</title>
 	</head>
 	<body>
+		<div class="stamp-options">
+			<img src="./img/stamp.png" class="stamp-current" alt="현재 스탬프"/>
+			<img src="./img/stamp.png" class="stamp-option"alt="꾸래핑" />
+			<img src="./img/stamp2.png" class="stamp-option"alt="나나핑" />
+			<img src="./img/stamp3.png" class="stamp-option"alt="차차핑" />
+			<img src="./img/stamp4.png" class="stamp-option"alt="똑똑핑" />
+			<img src="./img/stamp5.png" class="stamp-option"alt="볼트" />
+			<img src="./img/stamp6.png" class="stamp-option"alt="루시" />
+			<img src="./img/stamp7.png" class="stamp-option"alt="맥스" />
+			<img src="./img/stamp8.png" class="stamp-option"alt="새미" />
+		</div>
 		<div class="color-options">
 			<input type="color" id="color" />
 			<div
-				class="c olor-option"
+				class="color-option"
 				style="background: #c0392b"
 				data-color="#c0392b"
 			></div>
@@ -54,24 +65,29 @@
 			></div>
 		</div>
 		<canvas id="canvas"></canvas>
+
 		<div class="btns">
 			<input
-			type="range"
-			id="line-width"
-			max="10"
-			min="1"
-			value="5"
-			step="0.5"
+				type="range"
+				id="line-width"
+				max="10"
+				min="1"
+				value="5"
+				step="0.5"
 			/>
-			<button id="mode-btn">Fill</button>
-			<button id="destroy-btn">Destroy</button>
-			<button id="eraser-btn">Erase</button>
+			<button id="mode-btn">채우기모드</button>
+			<button id="destroy-btn">모두 지우기</button>
+			<button id="eraser-btn">지우개</button>
 			<label for="file">
-				Add Photo
-				<input type="file" accept="image/*" id="file">
+				사진 추가하기
+				<input type="file" accept="image/*" id="file" />
 			</label>
-			<input type="text" placeholder="Write and then double click" id="text">
-			<button id="save">Save Image</button>
+			<input
+				type="text"
+				placeholder="글자 쓰고 더블클릭으로 입력"
+				id="text"
+			/>
+			<button id="save">그림 저장하기</button>
 		</div>
 	</body>
 	<script src="js/main.js"></script>
